split build into multiple stages (part 1)